--- a/package.json
+++ b/package.json
@@ -53,6 +53,6 @@
     "react": "^16.12.0"
   },
   "publishConfig": {
-    "registry": "https://registry.npm.alibaba-inc.com"
+    "registry": "https://registry.npmjs.org/"
   }
 }
