更新文档说明

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "table-render",
   "version": "0.1.2",
-  "description": "协议驱动search-table生成器",
+  "description": "中后台表单解决方案",
   "scripts": {
     "start": "dumi dev",
     "site": "dumi build",
