--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "dayjs": "^1.8.29",
-    "form-render": "^0.9.0-beta.1",
+    "form-render": "^0.9.0",
     "lodash.get": "^4.4.2"
   },
   "devDependencies": {
