--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
+    "@ant-design/pro-card": "^1.8.3",
     "dayjs": "^1.8.29",
     "form-render": "^0.9.2",
     "lodash.get": "^4.4.2"
