--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,21 @@
 {
   "compilerOptions": {
     "target": "esnext",
+    "module": "esnext",
     "moduleResolution": "node",
-    "jsx": "preserve",
+    "importHelpers": true,
+    "jsx": "react",
     "esModuleInterop": true,
-    "allowJs": true,
+    "sourceMap": true,
+    "baseUrl": "./",
+    // "strict": true,
     "paths": {
-      "@/*": ["./src/*"]
-    }
-  }
+      "@/*": ["src/*"],
+      "@@/*": ["src/.umi/*"]
+    },
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "noImplicitAny": false
+  },
+  "exclude": ["node_modules", "lib", "es", "dist", "typings", "**/__test__", "test", "tests", "docs"]
 }
