--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "peerDependencies": {
     "antd": ">=4.0.0",
     "react": ">=16.8.0",
-    "form-render": ">0.9.x"
+    "form-render": ">=0.9.x"
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
