--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
   },
   "peerDependencies": {
     "antd": ">=4.0.0",
-    "react": ">=16.8.0"
+    "react": ">=16.8.0",
+    "form-render": ">=0.9.5"
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "@ant-design/pro-card": "^1.8.3",
     "dayjs": "^1.8.29",
-    "form-render": "0.9.5",
+    "form-render": "^0.9.5",
     "lodash.get": "^4.4.2"
   },
   "devDependencies": {
