--- a/package.json
+++ b/package.json
@@ -41,18 +41,19 @@
     "lodash.get": "^4.4.2"
   },
   "devDependencies": {
+    "@umijs/fabric": "^2.5.6",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.0.5",
+    "antd": "^4.4.1",
     "dumi": "^1.0.33",
     "father-build": "^1.17.2",
     "gh-pages": "^3.0.0",
     "lint-staged": "^10.0.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
+    "react": "^16.12.0",
     "umi-request": "^1.3.5",
-    "yorkie": "^2.0.0",
-    "antd": "^4.4.1",
-    "react": "^16.12.0"
+    "yorkie": "^2.0.0"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
