--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "dumi dev",
     "site": "dumi build",
     "build": "father-build",
+    "analyze":"ANALYZE=1 dumi dev",
     "predeploy": "npm run site",
     "deploy": "gh-pages -d docs-dist",
     "prepare": "npm run build",
